updated base flexbox
updated flexbox for responsive design on base.html and home.html

--- a/products/templates/about.html
+++ b/products/templates/about.html
@@ -1,55 +1,66 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<section id="content">
-    <div class="container">
-      <div class="row">
-          <p></p>
-        <div class="span12">
+    <div class="about-container">
+        <div class="box-1">
             <h4>About Our Cooperative</h4>
-            <blockquote>
-              We are the 1st Provincial Transport Co-op based in Romblon under Registration No. 9520-1018000000046928 issued on September 13, 2019 by the Cooperative Development Authority.
-            </blockquote>
+              "We are the 1st Provincial Transport Cooperative in the Province of Romblon under 
+               Registration No. 9520-1018000000046928, issued on September 13, 2019 by the 
+               Cooperative Development Authority."
         </div>
-
-        <div class="span12">
-            <h4>History</h4>
-            <p>
-                ROMBLON TRANSPORT COOPERATIVE (RTC) were created because of the PUV modernization program. The existing local transport  
-                operations and van owners joined force to form the cooperative complying with the standards set by law.
-            </p>
-            <p></p>
-            
-            <p>
-                For a long time now, land transportation is one of the service problems especially in the province of Romblon. 
-                Jeepney/mini buses are age-old thus safety and comforts of passengers are compromised. This is one contributing factor 
-                that shows down progress like mobility of goods and passengers are jeopardized.
-            </p>
-            <p></p>
-            
-            <p>
-                The ROMBLON TRANSPORT COOPERATIVE (RTC) organized the organization of Tourist, UV Express, Jeepney and Rental transport 
-                services in the Province of Romblon and to give comfortable and good services.
-            </p>
-            <p></p>    
-            <p>
-                The organization of the RTC is aimed to address this problem and is expected to support the development and effort of
-                the government to modernize transport system and ultimately bring about economic development and progress.
-            </p>
+        <div class="box-2">
+            <h4>General Information</h4>
+              <table>
+                <tr>
+                  <td class="gen-info">Type of Cooperative : </td>
+                  <td>Transport</td>
+                </tr>
+                <tr>
+                  <td class="gen-info">Area of Operation : </td>
+                  <td>Provincial</td>
+                </tr>
+                <tr>
+                  <td class="gen-info">Common Bond of Membership : </td>
+                  <td>Occupational</td>
+                </tr>
+                <tr>
+                  <td class="gen-info">Composition of Members : </td>
+                  <td>Workers, Employees, Operators and Drivers</td>
+                </tr>
+                <tr>
+                  <td class="gen-info">Number of Founding Members : </td>
+                  <td>39</td>
+                </tr>
+              </table>
         </div>
-        <div class="span12">
-
-          <!-- About Statement -->
-          <div class="mission text-center block block-pd-sm block-bg-noise">
-            <div class="container">
-              <h4 class="text-shadow-white text-justify" style="text-indent: 5%;">
-                
-              </h4>
-            </div>
-          </div>
-
-        </div>
-
+        <div class="box-3">
+          <h4>Line of Business</h4>
+          <ul>
+            <li>SALE OF MOTOR VEHICLE PARTS AND ACCESSORIES</li>
+            <li>JEEPNEY AND AUV OPERATION</li>
+          </ul>
       </div>
+      <div class="box-4">
+        <h4>Address</h4>
+        <p>Poblacion, San Agustin Romblon</p>
+    </div>
+        <div>
+          <h4>History</h4>
+            <span>ROMBLON TRANSPORT COOPERATIVE (RTC)</span> was formed in compliance with the  
+            PUV  modernization   program. The existing  local transport operators  
+            and van owners joined  force  to  form  the  cooperative  complying 
+            with the standards set by law.
+      </div>    
+      <div>
+            <span>RTC</span> organized the association of Tourist, UV Express, Jeepney  and 
+            Rental transport  services in the Province of Romblon to provide 
+            quality transport services.
+      </div>    
+      <div>
+            <span>RTC</span> aims to address transport problem and support the development and 
+            effort of the government to modernize transport system and ultimately 
+            bring about economic development and progress.
+      </div>      
+     
     </div>
 {% endblock %}
