--- a/static/css/base.css
+++ b/static/css/base.css
@@ -64,11 +64,6 @@ nav a:hover{
 .base-content{
     flex-basis: 90%;
     background-color: white;
-
-    /* background-image: url("/static/images/logo.png");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center; */
 }
 
 .base-footer{
@@ -92,10 +87,20 @@ nav a:hover{
     .base-footer{
         text-align: center;
         font-size: 67%;
+        color:red;
     }
+
     .home-header h2{
         font-size:1.5rem;
     }
+
+    .products-card-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        border:1px solid red;
+    }
+
 
     .officers{
         flex-direction: column;
@@ -109,7 +114,7 @@ nav a:hover{
         text-align: center;
     }
 }
-/*---HOME-------------------------------*/
+/*---HOME---*/
 .home-container{
     height: 100%;
     display:flex;
@@ -139,74 +144,80 @@ nav a:hover{
     align-items: center;
 }
 
-/*---PRODUCTS-------------------------------*/
+/*---PRODUCTS---*/
 .products-container{
-    /* height: calc(100vh - 100px); */
-    height:94%;
-    margin-top: .2rem;
-    padding:.5rem;
+    height:100%;
+    padding: .5rem;
     background-color: white;
     display: flex;
-    justify-content: space-between;
-
+    justify-content: center;
 }
+
 .category-sidebar{
+    height: 100%;
     border: 1px solid  #2196f3;
-    width: 40%;
-    height: 83%;
+    flex-basis: 10%;
+    padding: .3rem;
     box-shadow: 3px 3px 5px #888888;
     display:flex;
     flex-direction: column;
-    padding: 1rem;
+    padding: 1%;
     font-family: 'Shadows Into Light', cursive;
+    font-size: medium;
     font-weight: bold;
     text-shadow:3px 3px 5px #888888;
 }
 
-.products-card-container{
-    border: 1px solid  #2196f3;
-    margin-left: .5rem;  
-    width: 84%;
-    height: 98%;
-    box-shadow: 3px 3px 5px #888888;
-    display:flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    padding: 1rem;
-    overflow-y: scroll;
-
-}
-
 .category-sidebar a{
     text-decoration: none;
-    font-size: 1rem;
-    color: blue;
+}
+
+.category-sidebar a:hover{
+    color: crimson;
 }
 
 .left-arrow{
     height: 3rem;
     width: 5rem;
 }
-.products-list{
+.products-card-container{
+    height: 100%;
+    border: 1px solid  #2196f3;
+    flex-basis: 90%;
+    padding: .3rem;
+    box-shadow: 3px 3px 5px #888888;
+    margin-left: .5rem;  
     display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
 }
-.products-card{
-    padding: 1rem;
-}
-.products-card h5,p{
-    color: lightslategray;
-    font-size: 15px;
+
+.products-list{
+    width: 15%;
+    height: 35%;
 }
 
-/* .products-image{
-    border:1px solid goldenrod;
-    width: 120px;
-    height: 120px;
-    background-color: white;
+.products-card{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: .2rem;
     box-shadow: 3px 3px 5px #888888;
-} */
+}
+
+.products-card img{
+    width: 70%;
+    height: 55%;
+    border: 1px solid gold;
+}
+
+.products-card h6,p{
+    color: lightslategray;
+    font-size: 60%;
+}
 
 /*---ABOUT-------------------------------*/
 .about-container{
