--- a/products/templates/about.html
+++ b/products/templates/about.html
@@ -2,65 +2,213 @@
 
 {% block content %}
     <div class="about-container">
-        <div class="box-1">
-            <h4>About Our Cooperative</h4>
+        <div class="about-our-coop">
+            <h4 class="title-text">About Our Cooperative</h4>
+            <p class="regular-text">
               "We are the 1st Provincial Transport Cooperative in the Province of Romblon under 
                Registration No. 9520-1018000000046928, issued on September 13, 2019 by the 
                Cooperative Development Authority."
+              </p>
         </div>
-        <div class="box-2">
-            <h4>General Information</h4>
-              <table>
-                <tr>
-                  <td class="gen-info">Type of Cooperative : </td>
-                  <td>Transport</td>
-                </tr>
-                <tr>
-                  <td class="gen-info">Area of Operation : </td>
-                  <td>Provincial</td>
-                </tr>
-                <tr>
-                  <td class="gen-info">Common Bond of Membership : </td>
-                  <td>Occupational</td>
-                </tr>
-                <tr>
-                  <td class="gen-info">Composition of Members : </td>
-                  <td>Workers, Employees, Operators and Drivers</td>
-                </tr>
-                <tr>
-                  <td class="gen-info">Number of Founding Members : </td>
-                  <td>39</td>
-                </tr>
-              </table>
-        </div>
-        <div class="box-3">
-          <h4>Line of Business</h4>
-          <ul>
-            <li>SALE OF MOTOR VEHICLE PARTS AND ACCESSORIES</li>
-            <li>JEEPNEY AND AUV OPERATION</li>
+        
+        <div class="about-business-line">
+          <h4 class="title-text">Line of Business</h4>
+          <ul  class="regular-text">
+            <li>Sales of Motor Vehicle Parts and Accessories</li>
+            <li>Jeepney and AUV Operation</li>
           </ul>
-      </div>
-      <div class="box-4">
-        <h4>Address</h4>
-        <p>Poblacion, San Agustin Romblon</p>
-    </div>
-        <div>
-          <h4>History</h4>
+        </div>
+
+        <div class="about-address">
+          <h4 class="title-text">Address</h4>
+          <p  class="regular-text">Poblacion, San Agustin Romblon</p>
+        </div>
+
+        <div class="about-history">
+          <h4 class="title-text">History</h4>
+          <p  class="regular-text">
             <span>ROMBLON TRANSPORT COOPERATIVE (RTC)</span> was formed in compliance with the  
             PUV  modernization   program. The existing  local transport operators  
             and van owners joined  force  to  form  the  cooperative  complying 
             with the standards set by law.
-      </div>    
-      <div>
+          </p>
+          <p  class="regular-text">
             <span>RTC</span> organized the association of Tourist, UV Express, Jeepney  and 
             Rental transport  services in the Province of Romblon to provide 
             quality transport services.
-      </div>    
-      <div>
+          </p>
+          <p  class="regular-text">
             <span>RTC</span> aims to address transport problem and support the development and 
             effort of the government to modernize transport system and ultimately 
             bring about economic development and progress.
-      </div>      
-     
+          </p>
+        </div>
+
+        <div class="about-gen-info">
+          <div class="accordion" id="accordionGenInfo">
+            <div class="card">
+              <div class="card-header" id="headingGenInfo">
+                <h2 class="mb-0">
+                  <button class="btn btn-link btn-block text-left title-text" type="button" data-toggle="collapse" data-target="#collapseGenInfo" aria-expanded="true" aria-controls="collapseGenInfo">
+                    Gen. Info
+                  </button>
+                </h2>
+              </div>
+          
+              <div id="collapseGenInfo" class="collapse show" aria-labelledby="headingGenInfo" data-parent="#accordionGenInfo">
+                <div class="card-body regular-text">
+                  <table>
+                    <tr>
+                      <td class="gen-info">Type of Cooperative :</td>
+                      <td>Transport</td>
+                    </tr>
+                    <tr>
+                      <td class="gen-info">Area of Operation :</td>
+                      <td>Provincial</td>
+                    </tr>
+                    <tr>
+                      <td class="gen-info">Bond of Membership :</td>
+                      <td>Occupational</td>
+                    </tr>
+                    <tr>
+                      <td class="gen-info">Composition of Members :</td>
+                      <td>Workers, Employees, Operators and Drivers</td>
+                    </tr>
+                    <tr>
+                      <td class="gen-info">Founding Members : </td>
+                      <td>39</td>
+                    </tr>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="about-purposes">
+          <div class="accordion" id="accordionPurposes">
+            <div class="card">
+              <div class="card-header" id="headingPurposes">
+                <h2 class="mb-0">
+                  <button class="btn btn-link btn-block text-left title-text" type="button" data-toggle="collapse" data-target="#collapsePurposes" aria-expanded="true" aria-controls="collapsePurposes">
+                    Purposes
+                  </button>
+                </h2>
+              </div>
+          
+              <div id="collapsePurposes" class="collapse show" aria-labelledby="headingPurposes" data-parent="#accordionPurposes">
+                <div class="card-body regular-text">
+                  That the purposes for which this Cooperative is organized are to engage in:
+                  <ol start="1">
+                    <li>Provide public land transport services primarily to members and the commuting public;</li>
+                    <li>Engage in allied services or businesses such as:
+                      <ol type="a">
+                        <li>Marketing of spare parts and supplies;</li>
+                        <li>Marketing of Vehicle/Driver’s insurance policies;</li>
+                        <li>Auto Repair and Maintenance Shop;</li>
+                        <li>Vehicle Rental Services; and </li>
+                        <li>Micro Lending;</li>
+                      </ol>
+                    </li>
+                    <li>Promoting and advancing the economic and social status of the members;</li>
+                    <li>Coordinating and facilitating the activities of cooperatives;</li>
+                    <li>Advocating for the cause of the cooperative movements;</li>
+                    <li>Ensuring the viability of cooperatives through the utilization of new technologies; and</li>
+                    <li>Encouraging and promoting self-help or self-employment as an engine for economic growth and poverty alleviation.</li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+          </div>  
+        </div>
+
+          <div class="about-goals">
+            <div class="accordion" id="accordionGoals">
+              <div class="card">
+                <div class="card-header" id="headingGoals">
+                  <h2 class="mb-0">
+                    <button class="btn btn-link btn-block text-left title-text" type="button" data-toggle="collapse" data-target="#collapseGoals" aria-expanded="true" aria-controls="collapseGoals">
+                      Goals
+                    </button>
+                  </h2>
+                </div>
+            
+                <div id="collapseGoals" class="collapse show" aria-labelledby="headingGoals" data-parent="#accordionGoals">
+                  <div class="card-body regular-text">
+                    That the goals of this Cooperative are to help improve the quality life of its members and thereby contribute to inclusive growth, enterprise development and employment. In furtherance thereto, it shall aim:
+                    <ol start="1">
+                      <li>To attain increased income, savings, investments, productivity, and purchasing power, and promote among themselves equitable distribution of the surplus through maximum utilization of economies of scale, cost-sharing and risk-sharing.</li>
+                      <li>To provide optimum social and economic benefits to its members;</li>
+                      <li>To teach the members efficient ways of doing things in a Cooperative manner;</li>
+                      <li>To propagate Cooperative practices and innovative ideas in business undertakings and management;</li>
+                      <li>To empower through provision of access, ownership, control and opportunities to the poor, vulnerable, lower income and less privileged groups to increase their ownership in the wealth of the nation;</li>
+                      <li>To actively support the government, other Cooperatives and people-oriented organization, both local and foreign, in promoting Cooperatives as a practical means towards sustainable socio-economic development under a truly just and democratic society;</li>
+                      <li>To develop a dynamic savings mobilization and capital build-up schemes to sustain its developmental activities and long-term investments, thereby ensuring optimum economic benefits to the members, their families and the communities;</li>
+                      <li>To adopt membership expansion mechanism/scheme, thereby ensuring growth of the Cooperative movement;</li>
+                      <li>To implement policy guidelines that will ensure transparency, accountability and equitable access to its resources and services, and promote the interests of the members;</li>
+                      <li>To adopt such other plans as may help foster the welfare of the members, their families and the community;</li>
+                      <li>To advance the competitiveness and innovativeness of the industry;</li>
+                      <li>To coordinate with other Cooperatives on learning exchanges, coop trade, and information exchanges in fostering sustainable development.;</li>
+                      <li>To advocate legal framework and enabling policies appropriate for the development of transport Cooperatives; and</li>
+                      <li>To be the voice and the institution of the poor and the excluded in resisting the growth-centered development aggression and instead promote people-centered development. </li>
+                    </ol>
+                  </div>
+                </div>
+              </div>
+            </div> 
+        </div>
+
+        <div class="about-carousel">
+          <h4 class="title-text">Random Pics</h4>
+          <div id="carouselRandomPics" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/static/images/about/img1.JPG" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/static/images/about/img2.JPG" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/static/images/about/img3.JPG" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/static/images/about/img4.JPG" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/static/images/about/img5.JPG" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/static/images/about/img6.JPG" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/static/images/about/img7.JPG" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/static/images/about/img8.JPG" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/static/images/about/img9.JPG" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/static/images/about/img10.JPG" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/static/images/about/img11.JPG" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/static/images/about/img12.JPG" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselRandomPics" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselRandomPics" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+
+        </div>
     </div>
 {% endblock %}
