--- a/products/templates/category.html
+++ b/products/templates/category.html
@@ -3,9 +3,12 @@
 {% block content %}
     <div class="products-container">
         <div class="category-sidebar">
-                 {% for category in categories %}
-                    <a href="/products/category/?id={{category.id}}">{{ category.name }}</a>
-                 {% endfor%}
+            <div> 
+                <a class="title-text" href="/products">Categories</a>
+            </div>
+            {% for category in categories %}
+                <a class="regular-text" href="/products/category/?id={{category.id}}">{{ category.name }}</a>
+            {% endfor%}
         </div>
         <div class="products-card-container">
              {% block products_by_category %}
