--- a/products/templates/contact.html
+++ b/products/templates/contact.html
@@ -1,76 +1,47 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  
-    	<section id="inner-headline">
-      <div class="container">
+  <div class="contact-container">
+   
+    <div class="contact-iframe">
+      <h2>Map Locator</h2>
+      <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB3YSqeKQVodU5JRb15aCZRlRwNyssLPoM&q=Space+Needle,Seattle+WA"  
+      width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+
+    <div class="contact-form">
+      <h2>Get in touch with us by filling contact form below</h2>
+      <form action="" method="post" role="form" class="contactForm">
         <div class="row">
-          <div class="span12">
-            <div class="inner-heading">
-              
-              <h2>Get in touch</h2>
+          <div class="span4 form-group field">
+            <input type="text" name="name" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+            <div class="validation"></div>
+          </div>
+
+          <div class="span4 form-group">
+            <input type="email" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+            <div class="validation"></div>
+          </div>
+          <div class="span8 form-group">
+            <input type="text" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+            <div class="validation"></div>
+          </div>
+          <div class="span8 form-group">
+            <textarea name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+            <div class="validation"></div>
+            <div class="text-center">
+              <button class="btn-primary" type="submit">Send a message</button>
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </form>
+    </div>
 
-    <section id="content">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1081.5422671495178!2d120.58915885050708!3d16.452723429966223!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3391a3bba3b4df19%3A0xb707b1268d9755ee!2sOras+Building%2C+La+Trinidad%2C+Benguet!5e0!3m2!1sen!2sph!4v1551508200259" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
-
-      <div class="container">
-        <div class="row">
-        	<br>
-          <div class="span8">
-            <h4>Get in touch with us by filling contact form below</h4>
-
-            <div id="sendmessage">Your message has been sent. Thank you!</div>
-            <div id="errormessage"></div>
-            <form action="" method="post" role="form" class="contactForm">
-              <div class="row">
-                <div class="span4 form-group field">
-                  <input type="text" name="name" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                  <div class="validation"></div>
-                </div>
-
-                <div class="span4 form-group">
-                  <input type="email" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                  <div class="validation"></div>
-                </div>
-                <div class="span8 form-group">
-                  <input type="text" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                  <div class="validation"></div>
-                </div>
-                <div class="span8 form-group">
-                  <textarea name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                  <div class="validation"></div>
-                  <div class="text-center">
-                    <button class="btn btn-theme btn-medium margintop10" type="submit">Send a message</button>
-                  </div>
-                </div>
-              </div>
-            </form>
-          </div>
-          <div class="span4">
-            <div class="clearfix"></div>
-            <aside class="right-sidebar">
-
-              <div class="widget">
-                <h5 class="widgetheading">Contact information<span></span></h5>
-
-                <ul class="contact-info">
-                  <li><label>Address :</label>Cordillera Basic Sectors Transport Cooperative</strong><br>
-							Rm 4, 3rd Floor, Oras Commercial Building, Km. 5,<br>
-							Betag, La Trinidad, Benguet, Philippines</li>
-                  <li><label>Phone :</label>(074) 665-7544 / +63 938 589-4505</li>
-                  <li><label>Email : </label> cbstcoopeartive@gmail.com</li>
-                </ul>
-
-              </div>
-            </aside>
-          </div>
-        </div>
-      </div>
-    </section>
- 
+    <div class="contact-info">
+      <h2>Contact information</h2>
+      <img src="/static/images/email.png" alt=""><a target="_blank" href="mailto: romblontransport@yahoo.com">romblontransport@yahoo.com</a>
+      <br>
+      <img src="/static/images/fb.png" alt=""><a target="_blank" href="https://web.facebook.com/Romblon-Transport-Cooperative-RTC-108426610732157">Romblon Transport Cooperative - RTC</a>
+    </div>
+ </div>
 {% endblock %}
