--- a/static/css/base.css
+++ b/static/css/base.css
@@ -41,6 +41,10 @@ body {
     margin:0;
     padding:0;
     font-family: 'Bookman Old Style';
+    background-image: url("/static/images/main.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 .base-container{
@@ -102,7 +106,7 @@ nav a:hover{
 
 .base-content{
     flex-basis: 90%;
-    background-color: white;
+    /* background-color: white; */
 }
 
 .base-footer{
@@ -140,7 +144,7 @@ nav a:hover{
         font-size:1.5rem;
     }
 
-    .faq-container h2{
+    .faq-container h2, .contact-container h2{
         font-size: 1.5rem;
     }
 
@@ -154,7 +158,6 @@ nav a:hover{
         justify-content: center;
         align-content: center;
     }
-
     
     .officers img{
         width: 70px;
@@ -175,6 +178,7 @@ nav a:hover{
     justify-content: space-between;
     align-items: center;
 }
+
 .home-header{
     margin-top: .5rem;
     background-color: #2196f3;
@@ -201,7 +205,7 @@ nav a:hover{
 .products-container{
     height:100%;
     padding: .5rem;
-    background-color: white;
+    /* background-color: white; */
     display: flex;
     justify-content: center;
 }
@@ -309,7 +313,8 @@ nav a:hover{
     padding: 2rem;
     color: darkblue;
 }
-.faq-container h2{
+
+.faq-container h2, .contact-container h2{
     color: green;
     text-shadow: 1px 1px 2px #888888;
 }
@@ -359,4 +364,25 @@ nav a:hover{
 
 .officers h6{
     color:blue;
+}
+
+/*---CONTACT US---*/
+
+.contact-container{
+    padding: 3rem;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+
+}
+
+.contact-iframe{
+    width: 100%;
+    height: 30%;
+}
+
+.contact-container img{
+    width: 1rem;
+    height: 1rem;
 }
