updated contact base and rtc menus

--- a/products/templates/officers.html
+++ b/products/templates/officers.html
@@ -4,7 +4,7 @@
 <div class="officers-container">
 	<div class="officers">
 		<div class="card officers-card" style="width: 14rem;">
-			<img class="card-img-top"  src="/static/images/logo.png" alt="...">
+			<img class="card-img-top"  src="/static/images/home/logo.png" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">MARDO RANDY M. MADAMO</h5>
 				<p class="card-text">Chairman</p>
@@ -12,7 +12,7 @@
 			</div>
 		</div>
 		<div class="card officers-card" style="width: 14rem;">
-			<img class="card-img-top"  src="/static/images/logo.png" alt="...">
+			<img class="card-img-top"  src="/static/images/home/logo.png" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">JOSE LUIS A. FABIC</h5>
 				<p class="card-text">Vice-Chairman</p>
@@ -20,7 +20,7 @@
 			</div>
 		</div>
 		<div class="card officers-card" style="width: 14rem;">
-			<img class="card-img-top"  src="/static/images/logo.png" alt="...">
+			<img class="card-img-top"  src="/static/images/home/logo.png" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">ADRIAN C. GAYTANO</h5>
 				<p class="card-text">Member</p>
@@ -28,7 +28,7 @@
 			</div>
 		</div>
 		<div class="card officers-card" style="width: 14rem;">
-			<img class="card-img-top"  src="/static/images/logo.png" alt="...">
+			<img class="card-img-top"  src="/static/images/home/logo.png" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">JURY F. ANTONIO</h5>
 				<p class="card-text">Member</p>
@@ -36,7 +36,7 @@
 			</div>
 		</div>
 		<div class="card officers-card" style="width: 14rem;">
-			<img class="card-img-top"  src="/static/images/logo.png" alt="...">
+			<img class="card-img-top"  src="/static/images/home/logo.png" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">JUSTINO C. ALOJADO JR.</h5>
 				<p class="card-text">Member</p>
@@ -46,7 +46,7 @@
 	 </div>
      <div class="officers">
 		<div class="card officers-card" style="width: 14rem;">
-			<img class="card-img-top"  src="/static/images/logo.png" alt="...">
+			<img class="card-img-top"  src="/static/images/home/logo.png" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">ISAIAS S. LOTA</h5>
 				<p class="card-text">Chairman</p>
@@ -54,7 +54,7 @@
 			</div>
 		</div>
 		<div class="card officers-card" style="width: 14rem;">
-			<img class="card-img-top"  src="/static/images/logo.png" alt="...">
+			<img class="card-img-top"  src="/static/images/home/logo.png" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">SUNDAY L. MONTESA</h5>
 				<p class="card-text">Vice-Chairman</p>
@@ -62,7 +62,7 @@
 			</div>
 		</div>
 		<div class="card officers-card" style="width: 14rem;">
-			<img class="card-img-top"  src="/static/images/logo.png" alt="...">
+			<img class="card-img-top"  src="/static/images/home/logo.png" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">ROBERTO ANTONIO M. MAINES</h5>
 				<p class="card-text">Member</p>
@@ -72,7 +72,7 @@
 	 </div>
 	 <div class="officers">
 		<div class="card officers-card" style="width: 14rem;">
-			<img class="card-img-top"  src="/static/images/logo.png" alt="...">
+			<img class="card-img-top"  src="/static/images/home/logo.png" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">ADONIS F. FAMINI</h5>
 				<p class="card-text">Chairman</p>
@@ -80,7 +80,7 @@
 			</div>
 		</div>
 		<div class="card officers-card" style="width: 14rem;">
-			<img class="card-img-top"  src="/static/images/logo.png" alt="...">
+			<img class="card-img-top"  src="/static/images/home/logo.png" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">CRISOSTOMO B. BALLERA SR.</h5>
 				<p class="card-text">Vice-Chairman</p>
@@ -88,7 +88,7 @@
 			</div>
 		</div>
 		<div class="card officers-card" style="width: 14rem;">
-			<img class="card-img-top"  src="/static/images/logo.png" alt="...">
+			<img class="card-img-top"  src="/static/images/home/logo.png" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">SIMPLICIO M. MORTEL III</h5>
 				<p class="card-text">Member</p>
@@ -98,7 +98,7 @@
 	 </div>
 	 <div class="officers">
 		<div class="card officers-card" style="width: 14rem;">
-			<img class="card-img-top"  src="/static/images/logo.png" alt="...">
+			<img class="card-img-top"  src="/static/images/home/logo.png" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">JOSE LUIS A. FABIC</h5>
 				<p class="card-text">Chairman</p>
@@ -106,7 +106,7 @@
 			</div>
 		</div>
 		<div class="card officers-card" style="width: 14rem;">
-			<img class="card-img-top"  src="/static/images/logo.png" alt="...">
+			<img class="card-img-top"  src="/static/images/home/logo.png" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">JOCEBER M. GANGE</h5>
 				<p class="card-text">Vice-Chairman</p>
@@ -114,7 +114,7 @@
 			</div>
 		</div>
 		<div class="card officers-card" style="width: 14rem;">
-			<img class="card-img-top"  src="/static/images/logo.png" alt="...">
+			<img class="card-img-top"  src="/static/images/home/logo.png" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">ARNESTO R. FAJILAGOT JR.</h5>
 				<p class="card-text">Member</p>
@@ -124,7 +124,7 @@
 	 </div>
 	 <div class="officers">
 		<div class="card officers-card" style="width: 14rem;">
-			<img class="card-img-top"  src="/static/images/logo.png" alt="...">
+			<img class="card-img-top"  src="/static/images/home/logo.png" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">ANACRIS M. GALISANAO</h5>
 				<p class="card-text">Chairman</p>
@@ -132,7 +132,7 @@
 			</div>
 		</div>
 		<div class="card officers-card" style="width: 14rem;">
-			<img class="card-img-top"  src="/static/images/logo.png" alt="...">
+			<img class="card-img-top"  src="/static/images/home/logo.png" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">NICOLAS A. OMEMAGA</h5>
 				<p class="card-text">Vice-Chairman</p>
@@ -140,7 +140,7 @@
 			</div>
 		</div>
 		<div class="card officers-card" style="width: 14rem;">
-			<img class="card-img-top"  src="/static/images/logo.png" alt="...">
+			<img class="card-img-top"  src="/static/images/home/logo.png" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">MARGIE M. MANGAYA</h5>
 				<p class="card-text">Member</p>
@@ -150,7 +150,7 @@
 	 </div>
 	 <div class="officers">
 		<div class="card officers-card" style="width: 14rem;">
-			<img class="card-img-top"  src="/static/images/logo.png" alt="...">
+			<img class="card-img-top"  src="/static/images/home/logo.png" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">ARTURO M. MINDORO</h5>
 				<p class="card-text">Chairman</p>
@@ -158,7 +158,7 @@
 			</div>
 		</div>
 		<div class="card officers-card" style="width: 14rem;">
-			<img class="card-img-top"  src="/static/images/logo.png" alt="...">
+			<img class="card-img-top"  src="/static/images/home/logo.png" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">DOTHY LYN M. MANGOBA</h5>
 				<p class="card-text">Vice-Chairman</p>
@@ -166,7 +166,7 @@
 			</div>
 		</div>
 		<div class="card officers-card" style="width: 14rem;">
-			<img class="card-img-top"  src="/static/images/logo.png" alt="...">
+			<img class="card-img-top"  src="/static/images/home/logo.png" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">JUDY F. FERRAN</h5>
 				<p class="card-text">Member</p>
@@ -176,7 +176,7 @@
 	 </div>
 	 <div class="officers">
 		<div class="card officers-card" style="width: 14rem;">
-			<img class="card-img-top"  src="/static/images/logo.png" alt="...">
+			<img class="card-img-top"  src="/static/images/home/logo.png" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">MICHELLE GRACE L. MAGHANOY</h5>
 				<p class="card-text">Chairman</p>
@@ -184,7 +184,7 @@
 			</div>
 		</div>
 		<div class="card officers-card" style="width: 14rem;">
-			<img class="card-img-top"  src="/static/images/logo.png" alt="...">
+			<img class="card-img-top"  src="/static/images/home/logo.png" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">CHRISTINE S. CASANOVA</h5>
 				<p class="card-text">Vice-Chairman</p>
@@ -192,7 +192,7 @@
 			</div>
 		</div>
 		<div class="card officers-card" style="width: 14rem;">
-			<img class="card-img-top"  src="/static/images/logo.png" alt="...">
+			<img class="card-img-top"  src="/static/images/home/logo.png" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">ZENAIDA T. MANZANO</h5>
 				<p class="card-text">Member</p>
