--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
             <h2>ROMBLON TRANSPORT COOPERATIVE (RTC)</h2>
         </div>
         <div class="home-logo">
-            <img src="/static/images/rtc_logo.png">
+            <img src="/static/images/home/trans_logo.png">
         </div>
     </div>
 {% endblock %}
