--- a/products/templates/contact.html
+++ b/products/templates/contact.html
@@ -3,10 +3,38 @@
 {% block content %}
   <div class="contact-container">
    
-    <div class="contact-iframe">
-      <h2>Map Locator</h2>
-      <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB3YSqeKQVodU5JRb15aCZRlRwNyssLPoM&q=Space+Needle,Seattle+WA"  
-      width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <div class="contact-map">
+      <div class="contact-carousel">
+        <h2>Map Locator</h2>
+        <div id="carouselRandomPics" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="/static/images/contact/contact1.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="/static/images/contact/contact2.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="/static/images/contact/contact3.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="/static/images/contact/contact4.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="/static/images/contact/contact5.png" class="d-block w-100" alt="...">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselRandomPics" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselRandomPics" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+
+      </div>
     </div>
 
     <div class="contact-form">
@@ -39,9 +67,9 @@
 
     <div class="contact-info">
       <h2>Contact information</h2>
-      <img src="/static/images/email.png" alt=""><a target="_blank" href="mailto: romblontransport@yahoo.com">romblontransport@yahoo.com</a>
+      <img src="/static/images/contact/email.png" alt=""><a target="_blank" href="mailto: romblontransport@yahoo.com">romblontransport@yahoo.com</a>
       <br>
-      <img src="/static/images/fb.png" alt=""><a target="_blank" href="https://web.facebook.com/Romblon-Transport-Cooperative-RTC-108426610732157">Romblon Transport Cooperative - RTC</a>
+      <img src="/static/images/contact/fb.png" alt=""><a target="_blank" href="https://web.facebook.com/Romblon-Transport-Cooperative-RTC-108426610732157">Romblon Transport Cooperative - RTC</a>
     </div>
  </div>
 {% endblock %}
