--- a/static/css/base.css
+++ b/static/css/base.css
@@ -41,10 +41,16 @@ body {
     margin:0;
     padding:0;
     font-family: 'Bookman Old Style';
-    background-image: url("/static/images/main.png");
+    background-image: url("/static/images/home/main.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+}
+
+@keyframes gradient {
+    0% {background-position: 0% 50%;}
+    50% {background-position: 100% 50%;}
+    100% {background-position: 0% 50%;}
 }
 
 .base-container{
@@ -55,58 +61,41 @@ body {
 
 .base-header{
     flex-basis: 5%;
-    background-color: lightblue;
-}
-
-nav{
-    height: 100%;
-    display:flex;
-    box-shadow: 3px 3px 5px black;
-    text-shadow: 2px 2px 4px black;
-}
-
-@keyframes gradient {
-    0% {background-position: 0% 50%;}
-    50% {background-position: 100% 50%;}
-    100% {background-position: 0% 50%;}
-}
-
- nav p {
-    margin-top:0;
-    height:100%;
-    font-family: 'Bookman Old Style';
-    font-size: 100%;
-    font-weight: bolder;
-    text-shadow:1px 1px 3px #888888;
-    color: white;
     display: flex;
-    flex:2;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+
+    background-color: lightblue;
+    box-shadow: 3px 3px 5px black;
+}
+
+.rtc-logo{
+    color:white;
+    font-weight: bolder;
+    padding-left: .3rem;
+    padding-right: .3rem;
+    text-shadow: 1px 2px 3px black;
     background: linear-gradient(-45deg, lightblue,  skyblue, dodgerblue, lightsalmon); 
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
+
+    border:4px solid darkgoldenrod;
 }
 
-nav a{
-    text-decoration: none;
-    transition: all 0.2s;
-    display: flex;
-    flex:1;
-    justify-content: center;
-    align-items: center;
+.app-menus{
+    width: 100%;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 nav a:hover{
     text-decoration: none;
-    background-color: lightsalmon;
-    color: dodgerblue;
-    text-shadow: 1px 1px 3px  #888888;
+    color: green;
 }
 
 .base-content{
     flex-basis: 90%;
-    /* background-color: white; */
 }
 
 .base-footer{
@@ -377,12 +366,71 @@ nav a:hover{
 
 }
 
-.contact-iframe{
+.contact-map{
     width: 100%;
     height: 30%;
+    /* padding: .5rem; */
+    border:1px solid lightgray;
+    box-shadow: 3px 3px 5px black;
 }
 
-.contact-container img{
+.contact-info img{
     width: 1rem;
     height: 1rem;
 }
+
+/*---SIDEBAR---*/
+
+.rtc-menu button {
+    font-size: 2rem;
+    padding: 0.5rem;
+    background: none;
+    background-color:crimson;
+    border: none;
+    color: white;
+    cursor: pointer;
+}
+
+.sidebar {
+    position: fixed;
+    transition: all 0.5s;
+    transform: translateX(-10rem);
+    width: 10rem;
+    background-color: lightblue;
+    height: 12rem;
+    box-shadow: 3px 3px 5px black;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    z-index: 1;
+}
+ 
+.sidebar.open {
+    transform: translateX(0);
+}
+
+.sidebar button{
+    background-color: crimson;
+}
+
+.sidebar a:hover{
+  color:green;
+}
+
+.sidebar-close-button {
+    border-radius: 50%;
+    border: 0.1rem black solid;
+    width: 1.9rem;
+    height: 1.9rem;
+    padding: .1rem;
+    font-size: 1rem;
+    padding-top: 0;
+    cursor: pointer;
+    position: absolute;
+    right: 0.5rem;
+    top: 0.5rem;
+}
+  
