--- a/templates/base.html
+++ b/templates/base.html
@@ -28,8 +28,9 @@
                 <div class="app-menus">
                   <a class="menu-text" href="/home">Home</a>
                   <a class="menu-text" href="/products">Products</a>
-                  <a class="menu-text" href="/products/newsevents/">News & Events</a>
-                  <a class="menu-text" href="/products/services/">Services</a>
+                  <a class="menu-text" href="/newsevents">News & Events</a>
+                  <a class="menu-text" href="/services">Services</a>
+                  <a class="menu-text" href="/weather">Weather</a>
                   <a class="menu-text" href="/admin">Admin</a>
                 </div>
                 <div class="rtc-menu">
@@ -42,10 +43,10 @@
             <button class="sidebar-close-button" onclick="rtc_menus()">
               x
             </button>
-            <a class="menu-text" href="/products/about/">About Us</a>
-            <a class="menu-text" href="/products/contact/">Contact Us</a>
-            <a class="menu-text" href="/products/officers/">Officers</a>
-            <a class="menu-text" href="/products/faq/">FAQ</a>
+            <a class="menu-text" href="/about">About Us</a>
+            <a class="menu-text" href="/contact">Contact Us</a>
+            <a class="menu-text" href="/officers">Officers</a>
+            <a class="menu-text" href="/faq">FAQ</a>
           </div>
   
           <div class="base-content">
