--- a/static/css/base.css
+++ b/static/css/base.css
@@ -434,3 +434,29 @@ nav a:hover{
     top: 0.5rem;
 }
   
+/*---WEATHER---*/
+.weather-container{
+    height: 100%;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 3rem;
+}
+
+.weather-header{
+    border:1px solid red;
+    flex-basis: 20%;
+    align-self: stretch;
+}
+
+.weather-content{
+    border:1px solid blue;
+    flex-basis: 50%;
+    align-self: stretch;
+}
+
+.weather-footer{
+    border:1px solid green;
+    flex-basis: 30%;
+    align-self: stretch;
+}
